Rename ContextTrace.java to Scope.java and also include vfs class inside the Scope class. Which means refactoring all the globals and signatures which had the Vfs. I pray, i fucking pray this is the last time i have to refactor Scope/Vfs stuff like this ever again.